--- a/country_explorer.html
+++ b/country_explorer.html
@@ -299,6 +299,7 @@ globalMap = map;
 			MarkACountry(geocoder, "New Zealand")
 			MarkACountry(geocoder, "Djibouti")
                         MarkACountry(geocoder, "Honduras")
+                        MarkACountry(geocoder, "Switzerland")
 		}
 
 
@@ -377,6 +378,7 @@ globalMap = map;
 			MarkACountry(geocoder, "Bulgaria")
 			MarkACountry(geocoder, "Germany")
 			MarkACountry(geocoder, "Belgium")
+			MarkACountry(geocoder, "Switzerland")
 
 		  MarkACountry(geocoder, "Saudi Arabia")
 		  MarkACountry(geocoder, "Djibouti")
@@ -402,6 +404,7 @@ globalMap = map;
 			MarkACountry(geocoder, "Laos")
 			MarkACountry(geocoder, "Armenia")
 			MarkACountry(geocoder, "New Zealand")
+			MarkACountry(geocoder, "Switzerland")
 		    MarkACountry(geocoder, "Fiji")
 			MarkACountry(geocoder, "Libya")
 }
@@ -641,5 +644,6 @@ essays['Norway'] = $ajax({url: "norway.html", async: false}).responseText;
 essays['Nigeria'] = $.ajax({url: "Nigeria.html", async: false}).responseText;
 essats['Netherlands'] = $.ajax({url: "Netherlands.html", async: false}).responseText;
 essats['Denmark'] = $.ajax({url: "Denmark.html", async: false}).responseText;
-essays['Israel'] = $.ajax({url: "Israel.html", async: false}).responseText
+essays['Israel'] = $.ajax({url: "Israel.html", async: false}).responseText;
+essays['Switzerland'] = $.ajax({url: "Switzerland.html", async: false}).responseText;
 </script>
