--- a/country_explorer.html
+++ b/country_explorer.html
@@ -359,6 +359,7 @@ globalMap = map;
 			MarkACountry(geocoder, "New Zealand")
 			MarkACountry(geocoder, "Djibouti")
                         MarkACountry(geocoder, "Honduras")
+                        MarkACountry(geocoder, "Switzerland")
 		}
 
 
@@ -434,6 +435,7 @@ globalMap = map;
 		  MarkACountry(geocoder, "Pakistan")
 		  MarkACountry(geocoder, "Belgium")
 		  MarkACountry(geocoder, "Israel")
+		  MarkACountry(geocoder, "Switzerland")
 		}
 
 		}
@@ -475,6 +477,7 @@ globalMap = map;
 			MarkACountry(geocoder, "Bulgaria")
 			MarkACountry(geocoder, "Germany")
 			MarkACountry(geocoder, "Belgium")
+			MarkACountry(geocoder, "Switzerland')
 		  MarkACountry(geocoder, "Saudi Arabia")
 		  MarkACountry(geocoder, "Djibouti")
 
@@ -792,5 +795,6 @@ essays['Malaysia'] = $.ajax({url: "Malaysia.html", async: false}).responseText;
 essays['Nigeria'] = $.ajax({url: "Nigeria.html", async: false}).responseText;
 essats['Netherlands'] = $.ajax({url: "Netherlands.html", async: false}).responseText;
 essats['Denmark'] = $.ajax({url: "Denmark.html", async: false}).responseText;
-essays['Israel'] = $.ajax({url: "Israel.html", async: false}).responseText
+essays['Israel'] = $.ajax({url: "Israel.html", async: false}).responseText;
+essays['Switzerland'] = $.ajax({url: "Switzerland.html", async: false}).responseText;
 </script>
